[package]
name = "yiffOS-packages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

actix-web = "4.0.1"
actix-files = "0.6.0"

askama = "0.11.1"
askama_actix = "0.13.0"

diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }

log = "0.4.16"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"